# markdown-viewer

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  dprint.json  index.html  mise.toml  package-lock.json  package.json
.claude/: settings.local.json
.github/: release-drafter.yml
.github/workflows/: installers.yml  pages.yml  quality.yml  release-assets.yml  release-drafter.yml
docs/: export-pdf.md  index.html
plans/: file-extension-roadmap.md
scripts/: generate-third-party-licenses.mjs  prepare-pdf-tools.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: EmptyState.tsx  FileTree.tsx  FileTreeItem.tsx  FindBar.tsx  MarkdownViewer.tsx  MermaidBlock.tsx  SearchBar.tsx  SearchResults.tsx  Sidebar.tsx  Toolbar.tsx  ViewerShell.tsx  fileIcon.tsx
src/context/: AppContext.tsx
src/lib/: recentFiles.ts  tauri.ts  useFileWatcher.ts  useFindInFile.ts  useOpenFolder.ts  useSearch.ts  useTheme.ts
src/types/: index.ts
src/viewers/: fileTypes.ts  geojson.ts  registry.ts  types.ts  xlsxUtils.ts
src/viewers/plugins/: docx.tsx  dxf.tsx  geojson.tsx  gpx.tsx  html.tsx  image.tsx  json.tsx  kml.tsx  markdown.tsx  pdf.tsx  sqlite.tsx  text.tsx  xlsx.tsx
tools/: pdf-tools.lock.json
