[package]
name = "markdown-viewer"
version = "0.1.0"
description = "A Markdown Viewer Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "markdown_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
